--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -26,7 +26,7 @@
     border-radius: 50%;
   }
   body{
-    color: beige;
+    color: rgb(250, 250, 240);
     background-image: url("../images/background.png");
     background-size: 100%;
     
@@ -37,7 +37,7 @@ footer{
   border-top: solid 8px #4aaaa5;
   font-size: 10px;
   background-color: #666666;
-  color: beige;
+  color:  rgb(250, 250, 240);
   text-align: center;
   margin: 100px 0px 0px 0px;
   height: 50px;
@@ -50,8 +50,14 @@ footer{
   height: 50px;
 }
 #white{
-  color:beige;
+  color: rgb(250, 250, 240);
 }
 .description{
-  margin-top: 30px;
+  margin-top: 35px;
+}
+#button{
+  background-color: transparent;
+  color:  rgb(250, 250, 240);
+  border:  rgb(250, 250, 240) solid 2px;
+  border-radius: 3px;
 }
