--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -55,9 +55,12 @@ footer{
 .description{
   margin-top: 35px;
 }
-#button{
+button{
   background-color: transparent;
   color:  rgb(250, 250, 240);
   border:  rgb(250, 250, 240) solid 2px;
   border-radius: 3px;
+}
+.error{
+  font-size: xx-large;
 }
